Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- ContentBox items can now be sorted by Effective Date in addition to the
  already existing possibility of being sorted by Modification Date.
Bug fixes:
~~~~~~~~~~
- Wording "Current status" instead of "Actual status".
- Added back missing translation for box styles and better wording for box
  styles.
- Improved accessibility in folder_localrole_form.pt.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-