@@ -10,7 +10,11 @@ Bug fixes:
 - Wording "Current status" instead of "Actual status".
 - Added back missing translation for box styles and better wording for box
   styles.
-- Improved accessibility in folder_localrole_form.pt.
+- Improved accessibility in "folder_localrole_form.pt".
+- Reworked a bit the "manage_addCPSSiteForm.dtml": required fields now include
+  manager email, which is now not pre-filled anymore because it was a source of
+  errors, required fields are more clearly displayed, HTML is better and
+  variable names are more meaningful.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
